<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="TitleX" />

        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/release_date" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="152dp"
            android:layout_height="231dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/pmpopcorn" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_average_vote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vote_average" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:stepSize=".1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_plot_synopsis_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/text_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

